[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/ui/debug_overlay.gd" type="Script" id="1"]

[node name="DebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -220.0
offset_top = 16.0
offset_right = -16.0
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
offset_left = 0.0
offset_top = 0.0
offset_right = 200.0
offset_bottom = 520.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NextTurnButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Next Turn"

[node name="ToggleLogisticsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Show Logistics"

[node name="SpawnUnitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spawn Unit"

[node name="AssistantSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AssistantLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
text = "Assistant AI"

[node name="AssistantLog" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 180)
autowrap_mode = 2
scroll_active = true
selection_enabled = true

[node name="CommandReasoningLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
text = "Justification (Commandement)"

[node name="CommandReasoningLog" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 110)
autowrap_mode = 2
scroll_active = true
selection_enabled = true

[node name="EspionageReasoningLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
text = "Suggestions Espionnage"

[node name="EspionageReasoningLog" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 110)
autowrap_mode = 2
scroll_active = true
selection_enabled = true

[node name="LogisticsReasoningLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
text = "Alertes Logistique"

[node name="LogisticsReasoningLog" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/AssistantSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 110)
autowrap_mode = 2
scroll_active = true
selection_enabled = true

[node name="IntelSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="IntelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/IntelSection"]
layout_mode = 2
text = "Chronologie Renseignement"

[node name="IntelLog" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/IntelSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 140)
autowrap_mode = 2
scroll_active = true
selection_enabled = true

[node name="TelemetrySection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TelemetryLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TelemetrySection"]
layout_mode = 2
text = "Télémetrie"

[node name="TelemetryStatus" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TelemetrySection"]
layout_mode = 2
text = "Événements : 0 · Persistance désactivée"

[node name="TelemetryControls" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TelemetrySection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TelemetryFilter" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/TelemetrySection/TelemetryControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "Tous les événements"

[node name="TelemetryRefreshButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TelemetrySection/TelemetryControls"]
layout_mode = 2
text = "Actualiser"

[node name="CopySessionPathButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TelemetrySection/TelemetryControls"]
layout_mode = 2
text = "Copier chemin"

[node name="TelemetryLog" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/TelemetrySection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 160)
autowrap_mode = 2
scroll_active = true
selection_enabled = true
